[IMP] helpdesk_stock

--- a/helpdesk_stock/views/helpdesk_views.xml
+++ b/helpdesk_stock/views/helpdesk_views.xml
@@ -20,6 +20,22 @@
             </div>
             <xpath expr="//notebook/page[1]" position="after">
                 <page string="Inventory">
+                    <header>
+                        <button id="action_request"
+                                name="action_inventory_request" string="Request"
+                                class="oe_highlight"
+                                attrs="{'invisible': [('inventory_stage', '!=', 'draft')]}"
+                                type="object"/>
+                        <button id="action_cancel"
+                                name="action_inventory_cancel" string="Cancel"
+                                type="object"
+                                attrs="{'invisible': [('inventory_stage', '!=', 'requested')]}"/>
+                        <button id="action_reset_draft"
+                                name="action_inventory_reset" string="Reset to Draft"
+                                type="object"
+                                attrs="{'invisible': [('inventory_stage', '!=', 'cancelled')]}"/>
+                        <field name='inventory_stage' widget="statusbar"/>
+                    </header>
                     <field name="team_id" invisible="1"/>
                     <group groups="stock.group_stock_user">
                         <group id="stock-left">
@@ -56,20 +72,6 @@
                             <field name="state" readonly="1"/>
                         </tree>
                     </field>
-                    <field name='inventory_stage' invisible='1'/>
-                    <button id="action_request"
-                            name="action_inventory_request" string="Request"
-                            class="oe_highlight"
-                            attrs="{'invisible': [('inventory_stage', '!=', 'draft')]}"
-                            type="object"/>
-                    <button id="action_cancel"
-                            name="action_inventory_cancel" string="Cancel"
-                            type="object"
-                            attrs="{'invisible': [('inventory_stage', '!=', 'requested')]}"/>
-                    <button id="action_reset_draft"
-                            name="action_inventory_reset" string="Reset to Draft"
-                            type="object"
-                            attrs="{'invisible': [('inventory_stage', '!=', 'cancelled')]}"/>
                 </page>
             </xpath>
         </field>
