--- a/fieldservice_helpdesk_stock/views/helpdesk_ticket_view.xml
+++ b/fieldservice_helpdesk_stock/views/helpdesk_ticket_view.xml
@@ -11,7 +11,7 @@
         <field name="inherit_id" ref="helpdesk_stock.view_helpdesk_ticket_form_inherit_stock"/>
         <field name="arch" type="xml">
             <xpath expr="//field[@name='line_ids']/tree/field[@name='state']" position="before">
-                <field name="fsm_order_line_id"/>
+                <field name="fsm_order_line_id" readonly="1"/>
             </xpath>
             <xpath expr="//field[@name='line_ids']/tree/field[@name='name']" position="attributes">
                 <attribute name="attrs">{'readonly': [('fsm_order_line_id', '!=', False)]}</attribute>
