--- a/helpdesk_fieldservice/views/helpdesk_ticket_views.xml
+++ b/helpdesk_fieldservice/views/helpdesk_ticket_views.xml
@@ -11,7 +11,7 @@
         <field name="arch" type="xml">
             <notebook position="inside">
                 <page string="Service Requests">
-                    <field name="fsm_order_ids">
+                    <field name="fsm_order_ids" context="{'default_customer_id':partner_id,'default_location_id':fsm_location_id}">
                         <tree>
                             <field name="name"/>
                             <field name="customer_id"/>
