--- a/helpdesk_fieldservice/views/helpdesk_ticket_views.xml
+++ b/helpdesk_fieldservice/views/helpdesk_ticket_views.xml
@@ -7,11 +7,11 @@
     <record id="helpdesk_ticket_view_service_request_form" model="ir.ui.view">
         <field name="name">helpdesk.ticket.service.request.form</field>
         <field name="model">helpdesk.ticket</field>
-        <field name="inherit_id" ref="helpdesk_timesheet.helpdesk_ticket_view_form_inherit_helpdesk_timesheet"/>
+        <field name="inherit_id" ref="agreement_helpdesk.helpdesk_ticket_view_agreement_form"/>
         <field name="arch" type="xml">
             <notebook position="inside">
                 <page string="Service Requests">
-                    <field name="fsm_order_ids" context="{'default_customer_id':partner_id,'default_location_id':fsm_location_id}">
+                    <field name="fsm_order_ids" context="{'default_customer_id':partner_id,'default_location_id':fsm_location_id,'default_agreement_id':agreement_id,'default_serviceprofile_id':serviceprofile_id}">
                         <tree>
                             <field name="name"/>
                             <field name="customer_id"/>
