--- a/helpdesk_fieldservice/views/helpdesk_ticket_views.xml
+++ b/helpdesk_fieldservice/views/helpdesk_ticket_views.xml
@@ -7,7 +7,7 @@
     <record id="helpdesk_ticket_view_service_request_form" model="ir.ui.view">
         <field name="name">helpdesk.ticket.service.request.form</field>
         <field name="model">helpdesk.ticket</field>
-        <field name="inherit_id" ref="agreement_helpdesk.helpdesk_ticket_view_agreement_form"/>
+        <field name="inherit_id" ref="helpdesk_timesheet.helpdesk_ticket_view_form_inherit_helpdesk_timesheet"/>
         <field name="arch" type="xml">
             <notebook position="inside">
                 <page string="Service Requests">
