--- a/helpdesk_scope/views/helpdesk_scope.xml
+++ b/helpdesk_scope/views/helpdesk_scope.xml
@@ -9,7 +9,24 @@
             <tree editable="top" string="Helpdesk Scopes">
                 <field name="name"/>
                 <field name="description"/>
+                <field name="team_ids" widget="many2many_tags"/>
             </tree>
+        </field>
+    </record>
+
+    <record id="helpdesk_scope_from_view" model="ir.ui.view">
+        <field name="name">Ticket Scopes From</field>
+        <field name="model">helpdesk.scope</field>
+        <field name="arch" type="xml">
+             <form string="Helpdesk Scopes">
+                 <group col="4">
+                    <field name="name"/>
+                    <field name="team_ids" widget="many2many_tags"/>
+                </group>
+                <group>
+                    <field name="description"/>
+                </group>
+            </form>
         </field>
     </record>
 
