--- a/helpdesk_fieldservice/views/helpdesk_ticket_views.xml
+++ b/helpdesk_fieldservice/views/helpdesk_ticket_views.xml
@@ -26,4 +26,18 @@
             </field>
         </field>
     </record>
+
+    <record id="helpdesk_ticket_view_form_logic" model="ir.ui.view">
+        <field name="name">helpdesk.ticket.service.form.logic</field>
+        <field name="model">helpdesk.ticket</field>
+        <field name="inherit_id" ref="helpdesk.helpdesk_ticket_view_form"/>
+        <field name="arch" type="xml">
+            <field name="partner_name" position="attributes">
+                <attribute name="invisible">True</attribute>
+            </field>
+            <field name="partner_email" position="replace">
+                <field name="partner_email" attrs="{'invisible': [('partner_id','=',False)]}"/>
+            </field>
+        </field>
+    </record>
 </odoo>
