--- a/agreement_rma/views/rma_view.xml
+++ b/agreement_rma/views/rma_view.xml
@@ -6,11 +6,13 @@
         <field name="model">rma.order.line</field>
         <field name="inherit_id" ref="rma.view_rma_line_form"/>
         <field name="arch" type="xml">
-            <xpath expr="//field[@name='partner_id']" position="before">
+            <xpath expr="//field[@name='partner_id']" position="after">
                 <field name="agreement_id"
-                       domain="[('partner_id', '=', partner_id)]"/>
+                       domain="[('partner_id', '=', partner_id)]"
+                       options="{'no_create': True, 'no_open': True}"/>
                 <field name="serviceprofile_id"
-                       domain="[('agreement_id', '=', agreement_id)]"/>
+                       domain="[('agreement_id', '=', agreement_id)]"
+                       options="{'no_create': True, 'no_open': True}"/>
             </xpath>
         </field>
     </record>
@@ -22,7 +24,8 @@
         <field name="inherit_id" ref="rma.view_rma_rma_line_filter"/>
         <field name="arch" type="xml">
             <xpath expr="//group" position="inside">
-                <filter string="Service Profile" domain="[]"
+                <filter string="Service Profile" name="serviceprofile_id"
+                        domain="[]"
                         context="{'group_by':'serviceprofile_id'}"/>
             </xpath>
         </field>
