--- a/agreement_helpdesk/views/agreement_view.xml
+++ b/agreement_helpdesk/views/agreement_view.xml
@@ -5,7 +5,8 @@
     <record id="agreement_tickets_form_view" model="ir.ui.view">
         <field name="name">agreement.form.view</field>
         <field name="model">agreement</field>
-        <field name="inherit_id" ref="agreement.partner_agreement_form_view"/>
+        <field name="inherit_id"
+               ref="agreement_legal.partner_agreement_form_view"/>
         <field name="arch" type="xml">
             <div class="oe_button_box" position="inside">
                 <button name="action_view_ticket"
