[MIG][WIP][12.0] helpdesk_fieldservice

--- a/helpdesk_fieldservice/views/fsm_location_views.xml
+++ b/helpdesk_fieldservice/views/fsm_location_views.xml
@@ -1,8 +1,7 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="utf-8"?>
 <odoo>
 
-    <record model="ir.actions.act_window"
-            id="action_fsm_location_ticket">
+    <record id="action_fsm_location_ticket" model="ir.actions.act_window">
         <field name="name">Helpdesk Tickets</field>
         <field name="type">ir.actions.act_window</field>
         <field name="res_model">helpdesk.ticket</field>
