--- a/helpdesk_fieldservice/views/helpdesk_ticket_views.xml
+++ b/helpdesk_fieldservice/views/helpdesk_ticket_views.xml
@@ -1,17 +1,19 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="utf-8"?>
 <odoo>
-<!-- Copyright 2018 Open Source Integrators
-     License LGPL-3.0 or later (http://www.gnu.org/licenses/lgpl). -->
+    <!-- Copyright 2019 Open Source Integrators
+         License LGPL-3.0 or later (http://www.gnu.org/licenses/lgpl). -->
 
     <!-- Helpdesk Ticket Form View -->
     <record id="helpdesk_ticket_view_service_request_form" model="ir.ui.view">
         <field name="name">helpdesk.ticket.service.request.form</field>
         <field name="model">helpdesk.ticket</field>
-        <field name="inherit_id" ref="helpdesk_timesheet.helpdesk_ticket_view_form_inherit_helpdesk_timesheet"/>
+        <field name="inherit_id"
+               ref="helpdesk_timesheet.helpdesk_ticket_view_form_inherit_helpdesk_timesheet"/>
         <field name="arch" type="xml">
             <notebook position="inside">
                 <page string="Service Order">
-                    <field name="fsm_order_ids" context="{'default_customer_id':partner_id,'default_location_id':fsm_location_id}">
+                    <field name="fsm_order_ids"
+                           context="{'default_customer_id':partner_id,'default_location_id':fsm_location_id}">
                         <tree>
                             <field name="name"/>
                             <field name="customer_id"/>
@@ -36,7 +38,8 @@
                 <attribute name="invisible">True</attribute>
             </field>
             <field name="partner_email" position="replace">
-                <field name="partner_email" attrs="{'invisible': [('partner_id','=',False)]}"/>
+                <field name="partner_email"
+                       attrs="{'invisible': [('partner_id','=',False)]}"/>
             </field>
         </field>
     </record>
