--- a/fieldservice_googlemaps_address_autocompletion/views/fsm_location.xml
+++ b/fieldservice_googlemaps_address_autocompletion/views/fsm_location.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
+
     <!-- Field Service Location Form View-->
     <record id="fsm_location_form_view_autocomplete" model="ir.ui.view">
         <field name="name">fsm.location.form.autocomplete</field>
@@ -7,9 +8,12 @@
         <field name='inherit_id' ref='fieldservice.fsm_location_form_view'/>
         <field name="arch" type="xml">
             <field name='street' position='attributes'>
-                <attribute name='widget'>gplaces_address_autocomplete</attribute>
-                <attribute name='options'>{'lat':'partner_latitude','lng':'partner_longitude'}</attribute>
+                <attribute name='widget'>gplaces_autocomplete</attribute>
+                <attribute name='options'>
+                    {'lat':'partner_latitude','lng':'partner_longitude'}
+                </attribute>
             </field>
         </field>
     </record>
+
 </odoo>
