--- a/fieldservice_googlemaps_address_autocompletion/views/res_partner.xml
+++ b/fieldservice_googlemaps_address_autocompletion/views/res_partner.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
+
     <record id="fsm_partner_fields" model="ir.ui.view">
         <field name="name">res.partner.fsm.form</field>
         <field name="model">res.partner</field>
         <field name="inherit_id" ref="base.view_partner_form"/>
         <field name="arch" type="xml">
-            <xpath expr="//sheet/group//field[@name='street']" position='attributes'>
-                <attribute name='widget'>gplaces_address_autocomplete</attribute>
-                <attribute name='options'>{'lat':'partner_latitude','lng':'partner_longitude'}</attribute>
+            <xpath expr="//sheet/group//field[@name='street']"
+                   position='attributes'>
+                <attribute name='widget'>gplaces_autocomplete</attribute>
+                <attribute name='options'>
+                    {'lat':'partner_latitude','lng':'partner_longitude'}
+                </attribute>
             </xpath>
         </field>
     </record>
