[ADD] Submit Button Helpdesk Stock

--- a/helpdesk_stock/views/helpdesk_views.xml
+++ b/helpdesk_stock/views/helpdesk_views.xml
@@ -21,15 +21,18 @@
             <xpath expr="//notebook/page[1]" position="after">
                 <page string="Inventory">
                     <header>
-                        <button name="action_cancel"
-                                attrs="{'invisible': [('request_stage', 'not in', ['draft','open'])]}"
-                                type="object" string="Cancel"/>
+                        <button name="action_confirm"
+                                attrs="{'invisible': [('request_stage', 'not in', ['draft'])]}"
+                                type="object" string="Submit"/>
                         <button name="action_draft" type="object"
                                 attrs="{'invisible': [('request_stage', 'not in', ['cancel'])]}"
                                 string="Set to Draft"/>
                         <button name="action_done"
                             string="Done" type="object"
                             attrs="{'invisible': [('request_stage', 'not in', ['open'])]}"/>
+                        <button name="action_cancel"
+                                attrs="{'invisible': [('request_stage', 'not in', ['draft','open'])]}"
+                                type="object" string="Cancel"/>
                         <field name='request_stage' widget="statusbar"/>
                     </header>
                     <field name="stock_request_ids" nolabel="1">
