--- a/helpdesk_fieldservice/views/fsm_location_views.xml
+++ b/helpdesk_fieldservice/views/fsm_location_views.xml
@@ -25,7 +25,8 @@
                 <button name="action_view_ticket"
                         type="object"
                         class="oe_stat_button"
-                        icon="fa-pencil-square-o">
+                        icon="fa-pencil-square-o"
+                        context="{'default_fsm_location_id': active_id}">
                     <field name="ticket_count"
                            widget="statinfo"
                            string="Tickets"/>
