--- a/fieldservice_agreement_helpdesk/views/helpdesk_ticket.xml
+++ b/fieldservice_agreement_helpdesk/views/helpdesk_ticket.xml
@@ -10,10 +10,20 @@
         <field name="inherit_id" ref="helpdesk.helpdesk_ticket_view_form"/>
         <field name="arch" type="xml">
             <field name="fsm_order_ids" position="attributes">
-                <attribute name="context">{'default_agreement_id': agreement_id, 'default_serviceprofile_id': serviceprofile_id}</attribute>
+                <attribute name="context">{
+                    'default_customer_id': partner_id,
+                    'default_location_id': fsm_location_id,
+                    'default_priority': priority,
+                    'default_agreement_id': agreement_id,
+                    'default_serviceprofile_id': serviceprofile_id
+                    }</attribute>
             </field>
             <field name="agreement_id" position="attributes">
-                <attribute name="domain">['|', ('partner_id', '=', partner_id),('fsm_location_id', '=', fsm_location_id)]</attribute>
+                <attribute name="domain">[
+                    '|',
+                    ('partner_id', '=', partner_id),
+                    ('fsm_location_id', '=', fsm_location_id)
+                    ]</attribute>
             </field>        
         </field>
     </record>
