--- a/helpdesk_fieldservice/views/helpdesk_ticket_views.xml
+++ b/helpdesk_fieldservice/views/helpdesk_ticket_views.xml
@@ -13,9 +13,8 @@
             <notebook position="inside">
                 <page string="Service Orders">
                     <field name="fsm_order_ids"
-                           context="{'default_customer_id': partner_id,
-                                     'default_location_id': fsm_location_id,
-                                     'default_priority': priority}">
+                           context="{'create_order':True}"
+                           readonly="1">
                         <tree>
                             <field name="name"/>
                             <field name="customer_id"/>
@@ -28,6 +27,9 @@
             <field name="partner_id" position="before">
                 <field name="fsm_location_id"/>
             </field>
+            <button name="assign_ticket_to_self" position="after">
+                <button name="action_create_order" string="Create FSM Order" type="object"/>
+            </button>
         </field>
     </record>
 
