--- a/helpdesk_fieldservice/views/helpdesk_ticket_views.xml
+++ b/helpdesk_fieldservice/views/helpdesk_ticket_views.xml
@@ -13,8 +13,7 @@
             <notebook position="inside">
                 <page string="Service Orders">
                     <field name="fsm_order_ids"
-                           context="{'create_order':True}"
-                           readonly="1">
+                           context="{'create_order':True}">
                         <tree>
                             <field name="name"/>
                             <field name="customer_id"/>
