[IMP] Github comments

--- a/helpdesk_fieldservice/views/helpdesk_ticket_views.xml
+++ b/helpdesk_fieldservice/views/helpdesk_ticket_views.xml
@@ -13,8 +13,7 @@
             <notebook position="inside">
                 <page string="Service Orders">
                     <button name="action_create_order" string="Create FSM Order" type="object" class="oe_highlight"/>
-                    <field name="fsm_order_ids"
-                           context="{'create_order':True}">
+                    <field name="fsm_order_ids">
                         <tree>
                             <field name="name"/>
                             <field name="customer_id"/>
@@ -50,7 +49,7 @@
               parent="helpdesk.menu_helpdesk_root"
               sequence="10"/>
 
-    <menuitem id="menu_helpdesk_product"
+    <menuitem id="menu_helpdesk_fsm_order"
               name="Service Orders"
               action="fieldservice.action_fsm_dash_order"
               parent="menu_helpdesk_op"
