[IMP] helpdesk_fieldservice: Create Order Button (PM #550) (#105)

--- a/helpdesk_fieldservice/views/helpdesk_ticket_views.xml
+++ b/helpdesk_fieldservice/views/helpdesk_ticket_views.xml
@@ -12,10 +12,8 @@
         <field name="arch" type="xml">
             <notebook position="inside">
                 <page string="Service Orders">
-                    <field name="fsm_order_ids"
-                           context="{'default_customer_id': partner_id,
-                                     'default_location_id': fsm_location_id,
-                                     'default_priority': priority}">
+                    <button name="action_create_order" string="Create FSM Order" type="object" class="oe_highlight"/>
+                    <field name="fsm_order_ids">
                         <tree>
                             <field name="name"/>
                             <field name="customer_id"/>
@@ -42,6 +40,28 @@
             <field name="partner_email" position="replace">
                 <field name="partner_email"
                        attrs="{'invisible': [('partner_id','=',False)]}"/>
+            </field>
+        </field>
+    </record>
+
+    <record id="helpdesk_ticket_tree_view_location" model="ir.ui.view">
+        <field name="name">helpdesk.ticket.tree.location</field>
+        <field name="model">helpdesk.ticket</field>
+        <field name="inherit_id" ref="helpdesk.helpdesk_tickets_view_tree"/>
+        <field name="arch" type="xml">
+            <field name="partner_id" position="after">
+                <field name="fsm_location_id"/>
+            </field>
+        </field>
+    </record>
+
+    <record id="helpdesk_ticket_search_view_location" model="ir.ui.view">
+        <field name="name">helpdesk.ticket.search.location</field>
+        <field name="model">helpdesk.ticket</field>
+        <field name="inherit_id" ref="helpdesk.helpdesk_tickets_view_search"/>
+        <field name="arch" type="xml">
+            <field name="partner_id" position="after">
+                <field name="fsm_location_id"/>
             </field>
         </field>
     </record>
