[IMP] Add Direct to Tickets
[ADD] Direction

--- a/helpdesk_stock/views/helpdesk_views.xml
+++ b/helpdesk_stock/views/helpdesk_views.xml
@@ -51,6 +51,7 @@
                             <field name="product_uom_id"
                                    options="{'no_open': True, 'no_create': True}"
                                    groups="uom.group_uom"/>
+                            <field name="direction" required="1"/>
                             <field name="route_id"
                                    options="{'no_create': True}"
                                    groups="stock.group_stock_multi_locations"/>
@@ -59,12 +60,10 @@
                             <field name="qty_in_progress"/>
                             <field name="qty_done"/>
                             <field name="expected_date" invisible="1"/>
-                            <field name="picking_policy"
-                                   invisible="1"/>
+                            <field name="picking_policy" invisible="1"/>
                             <field name="warehouse_id" invisible="1"/>
                             <field name="location_id" invisible="1"/>
-                            <field name="procurement_group_id"
-                                   invisible="1"/>
+                            <field name="procurement_group_id" invisible="1"/>
                             <field name="company_id" invisible="1"/>
                             <field name="state"/>
                         </tree>
@@ -90,5 +89,11 @@
               action="stock.quantsact"
               parent="helpdesk.helpdesk_ticket_report_menu_main"
               sequence="50"/>
+
+    <menuitem id="menu_helpdesk_stock_request"
+              name="Stock Requests"
+              action="stock_request.action_stock_request_form"
+              parent="menu_helpdesk_data"
+              sequence="90"/>
 
 </odoo>
