--- a/helpdesk_fieldservice/views/helpdesk_ticket_views.xml
+++ b/helpdesk_fieldservice/views/helpdesk_ticket_views.xml
@@ -2,7 +2,7 @@
 <odoo>
     <!-- Copyright 2019 Open Source Integrators
          License LGPL-3.0 or later (http://www.gnu.org/licenses/lgpl). -->
-    <template id="shrink_tree_column" name="account assets" inherit_id="web.assets_backend">
+    <template id="shrink_tree_column" name="helpdesk assets" inherit_id="web.assets_backend">
         <xpath expr="." position="inside">
             <link rel="stylesheet" href="helpdesk_fieldservice/static/src/scss/helpdesk_column.scss"/>
         </xpath>
